# agentorg

./: .env.example  .gitignore
agentorg/: main.py
backend/: pyproject.toml
backend/agentorg/: config.py  database.py  main.py
backend/agentorg/api/v1/: agents.py  gates.py  runs.py  sessions.py  webhooks.py  workflows.py
backend/agentorg/api/ws/: events.py
backend/agentorg/core/: agent_runner.py  cost_guard.py  event_bus.py  gate_manager.py  orchestrator.py  soul_manager.py  workflow_parser.py
backend/agentorg/models/: __init__.py  agent.py  artifact.py  event.py  gate.py  run.py  workflow.py
backend/agentorg/schemas/: agent.py  run.py  workflow.py
backend/agentorg/services/: soul_sync_service.py  trigger_service.py
backend/agentorg/tools/: context_tools.py  file_tools.py  github_tools.py  memory_tools.py  registry.py  search_tools.py  soul_tools.py
frontend/: package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/agents/: page.tsx
frontend/app/agents/[slug]/: page.tsx
frontend/app/components/: EventLog.tsx  GateApproval.tsx  TriggerForm.tsx  WorkflowDAG.tsx
frontend/app/runs/: page.tsx
frontend/app/runs/[id]/: page.tsx
frontend/app/sessions/: page.tsx
frontend/app/workflows/: page.tsx
frontend/hooks/: useWebSocket.ts
frontend/lib/: api.ts  types.ts
souls/: coder.soul.md  orchestrator.soul.md  researcher.soul.md  reviewer.soul.md  shipper.soul.md
tests/: test_ping.py
workflows/: feature_implementation.yaml  memory-consolidation.yaml  soul_improvement.yaml
(+2 files in other folders)
